@@ -591,6 +591,7 @@ exit 0
 - add dependency result int array to dependency sets.
 - lazy malloc for dependency set color/refs/result on 1st setter call.
 - set boolean result in rpmdsSearch (if malloc'd).
+- fix: set transaction autorollback goal from popt on --install.
 
 * Mon Nov  7 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.40
 - generate executable(foo) run-time shell requirements, opt-in for now.
